Fix CTA spacings

--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -86,6 +86,7 @@
   .details {
     padding-bottom: 0.75rem;
     flex-flow: row wrap;
+    margin-bottom: 0;
 
     .detail-title {
       display: block;
